# Machine-Learning-On-Raspberry-Pi-Pico-with-Edge-Impulse

./: CMakeLists.txt  README.md
source/: CMakeLists.txt  main.cpp
